# Requirements

./: .env.example  .gitignore  GTR-SDS.xlsx  README.md  REPORT.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-03-19-requirements-decomposition.md
docs/superpowers/specs/: 2026-03-19-requirements-decomposition-design.md  2026-03-19-web-frontend-design.md
prompts/: generate_vv.txt
reqdecomp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: configure.py  strip_xlsx.py
src/: config.py  cost_tracker.py  decomposer.py  exporter.py  llm_client.py  loader.py  main.py  models.py  prompts.py  refiner.py  validator.py  verifier.py
src/web/: app.py
src/web/static/: app.js  style.css
src/web/templates/: index.html
tests/: test_cost_tracker.py  test_decomposer.py  test_exporter.py  test_loader.py  test_models.py  test_prompts.py  test_validator.py  test_verifier.py
